# nanogpt

./: .gitignore  CLAUDE.md  PLAN.md  README.md  config.py  pyproject.toml
.github/workflows/: deploy.yml
data/: prepare.py
data/processed/: meta.json  sample.txt
infra/etl/: samconfig.toml  template.yaml
infra/foundation/: samconfig.toml  template.yaml
libs/nanogpt/: pyproject.toml
libs/nanogpt/nanogpt/: config.py  dataset.py  model.py
notebooks/: explore.ipynb  toy_encoder.py
services/etl/: Dockerfile  prepare.py
services/serving/: generate.py
services/training/: train.py
src/: dataset.py  generate.py  model.py  tokenizer.py  train.py
