[project]
name = "nanogpt"
version = "0.1.0"
description = "Shared model core: transformer, tokenizer, dataset, config"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "torch>=2.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanogpt"]
